tests/compile_fail/as_mut/struct_attr_multiple_fields.stderr
error: `#[as_mut(...)]` can only be applied to structs with exactly one field
 --> tests/compile_fail/as_mut/struct_attr_multiple_fields.rs:5:5
  |
5 |     baz: f32,
  |     ^^^
